[gd_scene load_steps=11 format=3 uid="uid://o5bnnld2usew"]

[ext_resource type="Texture2D" uid="uid://12goi6amxmwm" path="res://Sprites/Weapons/GlockIcon.png" id="1_6qhkp"]
[ext_resource type="Script" path="res://Scripts/Gameplay/dropped_item.gd" id="1_pupw1"]
[ext_resource type="Resource" uid="uid://cfbsd3cvl7twk" path="res://Resources/Glock.tres" id="3_5em2o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhd4y"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pjv1k"]

[sub_resource type="Animation" id="Animation_npq86"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ci0o3"]
resource_name = "despawn"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_13xbj"]
resource_name = "grace period"
length = 0.466
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.627451), Color(1, 1, 1, 0.117647), Color(1, 1, 1, 0.627451)]
}

[sub_resource type="Animation" id="Animation_4kji0"]
resource_name = "lifetime"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lnaip"]
_data = {
"RESET": SubResource("Animation_npq86"),
"despawn": SubResource("Animation_ci0o3"),
"grace period": SubResource("Animation_13xbj"),
"lifetime": SubResource("Animation_4kji0")
}

[node name="DroppedItem" type="RigidBody2D"]
collision_layer = 0
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_pupw1")
gun_resource = ExtResource("3_5em2o")
natVel = Vector2(0, 25)
accel = 50.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6qhkp")

[node name="EnvironmentCollision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_bhd4y")

[node name="PickupTrigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupTrigger"]
visible = false
shape = SubResource("RectangleShape2D_pjv1k")
debug_color = Color(0, 0.636999, 0.397768, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lnaip")
}

[connection signal="body_entered" from="PickupTrigger" to="." method="_on_pickup_trigger_body_entered"]
[connection signal="body_entered" from="PickupTrigger" to="." method="_on_body_entered"]
